Flagging all fields

--- a/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
+++ b/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "from astropy.table import Table\n",
     "\n",
-    "import itertools"
+    "import itertools\n",
+    "\n",
+    "from herschelhelp_internal.flagging import flag_outliers"
    ]
   },
   {
@@ -160,98 +162,33 @@
    },
    "outputs": [],
    "source": [
-    "def flag_outliers(x, y, xerr, yerr, flagcol_x, flagcol_y, labels=[\"x\", \"y\"]):\n",
-    "    \n",
-    "    # Add flag columns if does not exist\n",
-    "    if flagcol_x not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol_x] = np.zeros(len(master_catalogue), dtype=bool)\n",
-    "    if flagcol_y not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol_y] = np.zeros(len(master_catalogue), dtype=bool)\n",
-    "    flagx, flagy = master_catalogue[flagcol_x], master_catalogue[flagcol_y]\n",
-    "        \n",
-    "    ## Find outliers  \n",
-    "    # Use only finite values\n",
-    "    mask = np.isfinite(x) & np.isfinite(y) & np.isfinite(xerr) & np.isfinite(yerr)\n",
-    "    x, y = np.copy(x[mask]), np.copy(y[mask])\n",
-    "    xerr, yerr = np.copy(xerr[mask]), np.copy(yerr[mask])\n",
-    "    flagx, flagy = np.copy(flagx[mask]), np.copy(flagy[mask])\n",
-    "    \n",
-    "    # Set the minimum error to 10^-3\n",
-    "    if (len(xerr)!=0 and len(yerr)!=0):\n",
-    "        np.clip(xerr, 5e-3, np.max(xerr), out=xerr)\n",
-    "        np.clip(yerr, 5e-3, np.max(yerr), out=yerr)\n",
-    "\n",
-    "    diff = y - x\n",
-    "    \n",
-    "    x_label, y_label = labels\n",
-    "    \n",
-    "    # If the difference is all NaN there is nothing to compare.\n",
-    "    if np.isnan(diff).all():\n",
-    "        print(\"No sources have both {} and {} values.\".format(\n",
-    "            x_label, y_label))\n",
-    "        print(\"\")\n",
-    "        return\n",
-    "    \n",
-    "    diff_label = \"{} - {}\".format(y_label, x_label)\n",
-    "    print(\"{}:\".format(diff_label))\n",
-    "    \n",
-    "    # Chi2 (Normalized difference)\n",
-    "    ichi2 = np.power(diff, 2) / (np.power(xerr, 2) + np.power(yerr, 2))\n",
-    "    mask2 = ichi2 != 0.0\n",
-    "    diff, ichi2 = np.copy(diff[mask2]), np.copy(ichi2[mask2])\n",
-    "    x, y, xerr, yerr = np.copy(x[mask2]), np.copy(y[mask2]), np.copy(xerr[mask2]), np.copy(yerr[mask2])\n",
-    "\n",
-    "    log_ichi2_25p, log_ichi2_75p = np.percentile(np.log10(ichi2), [25., 75.])\n",
-    "    out_lim = log_ichi2_75p + 3.2*abs(log_ichi2_25p-log_ichi2_75p)\n",
-    "    \n",
-    "    outliers = np.log10(ichi2) > out_lim \n",
-    "    nb_outliers = len(x[outliers])\n",
-    "\n",
-    "    print(\"  Number of outliers: {}\".format(nb_outliers))\n",
-    "    \n",
-    "    \n",
-    "    ## Flag outliers\n",
-    "    flagx[outliers], flagy[outliers] = np.ones(nb_outliers, dtype=bool), np.ones(nb_outliers, dtype=bool)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
     "\n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
     "        # Aperture mag\n",
-    "        try:\n",
-    "            col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
-    "            ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
-    "            flagcol1, flagcol2 = \"flag_{}_ap\".format(basecol1), \"flag_{}_ap\".format(basecol2)\n",
+    "        col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
+    "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
+    "        flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
     "        \n",
-    "            flag_outliers(master_catalogue[col1], master_catalogue[col2],\n",
-    "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
-    "                          labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
-    "        except KeyError:\n",
-    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
+    "        \n",
+    "        master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
+    "                      ecol1, ecol2,\n",
+    "                      flagcol1, flagcol2,\n",
+    "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
     "                      \n",
-    "        try:\n",
-    "            # Tot mag\n",
-    "            col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
-    "            ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
-    "            flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
     "                      \n",
-    "            flag_outliers(master_catalogue[col1], master_catalogue[col2], \n",
-    "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
-    "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
-    "        except KeyError:\n",
-    "            print(\"Probably no total mag on {} or {}\".format(col1, col2))            \n",
+    "        \n",
+    "        # Tot mag\n",
+    "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
+    "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
+    "        flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
+    "                      \n",
+    "        master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
+    "                      ecol1, ecol2,\n",
+    "                      flagcol1, flagcol2,\n",
+    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))            \n",
     "                      "
    ]
   },
