--- a/dmu6/dmu6_v_SPIRE-NEP/4_flags_spire-nep.ipynb
+++ b/dmu6/dmu6_v_SPIRE-NEP/4_flags_spire-nep.ipynb
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "from astropy.table import Table\n",
     "\n",
-    "import itertools"
+    "import itertools\n",
+    "\n",
+    "from herschelhelp_internal.flagging import flag_outliers"
    ]
   },
   {
