--- a/dmu1/dmu1_ml_Bootes/1.0_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.0_Brown_Reformatting.ipynb
@@ -98,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#imported_columns = OrderedDict({\n",
@@ -213,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "irac_i2_catalogue['id'].name = 'brown_irac_id'\n",
@@ -814,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "replacements = [\n",
@@ -939,7 +945,7 @@
     }
    ],
    "source": [
-    "print(\"{} sources flagged.\".format(np.sum(merged_catalogue[GAIA_FLAG_NAME] > 0)))"
+    "print(\"{} sources flagged.\".format(np.sum(merged_catalogue[\"flag_gaia\"] > 0)))"
    ]
   },
   {
@@ -952,7 +958,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1158,7 +1166,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_catalogue[id_names].write(\n",
@@ -1253,7 +1263,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_optical_flux = (\n",
@@ -1292,7 +1304,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "has_optical_flux = nb_optical_flux >= 2\n",
@@ -1415,7 +1429,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "columns = [\"help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
