--- a/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
+++ b/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -51,16 +51,17 @@
     "i_bands = [\"Megacam i\", \"SUPRIME i\", \"GPC1 i\",           \"MMT i\"]\n",
     "z_bands = [\"Megacam z\", \"SUPRIME z\", \"GPC1 z\", \"BASS z\", \"MMT z\"]\n",
     "y_bands = [             \"SUPRIME y\", \"GPC1 y\"]\n",
-    "J_bands = [                                             \"WIRCAM J\",  \"WIRCS J\",                \"UKIDSS J\", \"OMEGA2000 J\"]\n",
-    "H_bands = [                                             \"WIRCAM H\"]\n",
-    "K_bands = [                                             \"WIRCAM Ks\", \"WIRCS K\", \"NEWFIRM K\",              \"OMEGA2000 Ks\"]\n",
+    "\n",
+    "J_bands = [\"WIRCAM J\",  \"WIRCS J\",              \"UKIDSS J\", \"OMEGA2000 J\"]\n",
+    "H_bands = [\"WIRCAM H\"]\n",
+    "K_bands = [\"WIRCAM Ks\", \"WIRCS K\", \"NEWFIRM K\",             \"OMEGA2000 Ks\"]\n",
     "\n",
     "all_bands = [u_bands, g_bands, r_bands, i_bands, z_bands, y_bands, J_bands, K_bands]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -110,11 +111,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 34\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 37\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 56\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 55\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 53\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 58\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 37\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 34\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 16\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 18\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry cat \n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -146,11 +177,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WIRCS K\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 26\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 58\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "  return getattr(self.data, op)(other)\n"
+     ]
+    }
+   ],
    "source": [
     "wircs_mag = 100.0\n",
     "bands = [\"WIRCS K\"]\n",
@@ -181,13 +230,128 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Megacam u MMT u\n",
+      "No sources have both Megacam u (aperture) and MMT u (aperture) values.\n",
+      "\n",
+      "MMT u (total) - Megacam u (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g SUPRIME g\n",
+      "SUPRIME g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 4\n",
+      "SUPRIME g (total) - Megacam g (total):\n",
+      "  Number of outliers: 4\n",
+      "Megacam g GPC1 g\n",
+      "GPC1 g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - Megacam g (total):\n",
+      "  Number of outliers: 2\n",
+      "Megacam g BASS g\n",
+      "One of m_ap_megacam_g and m_ap_bass_g is not present in the catalogue.\n",
+      "One of m_megacam_g and m_bass_g is not present in the catalogue.\n",
+      "Megacam g MMT g\n",
+      "No sources have both Megacam g (aperture) and MMT g (aperture) values.\n",
+      "\n",
+      "MMT g (total) - Megacam g (total):\n",
+      "  Number of outliers: 495\n",
+      "SUPRIME g GPC1 g\n",
+      "GPC1 g (aperture) - SUPRIME g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - SUPRIME g (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME g BASS g\n",
+      "One of m_ap_suprime_g and m_ap_bass_g is not present in the catalogue.\n",
+      "One of m_suprime_g and m_bass_g is not present in the catalogue.\n",
+      "SUPRIME g MMT g\n",
+      "No sources have both SUPRIME g (aperture) and MMT g (aperture) values.\n",
+      "\n",
+      "MMT g (total) - SUPRIME g (total):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 g BASS g\n",
+      "One of m_ap_gpc1_g and m_ap_bass_g is not present in the catalogue.\n",
+      "One of m_gpc1_g and m_bass_g is not present in the catalogue.\n",
+      "GPC1 g MMT g\n",
+      "No sources have both GPC1 g (aperture) and MMT g (aperture) values.\n",
+      "\n",
+      "MMT g (total) - GPC1 g (total):\n",
+      "  Number of outliers: 0\n",
+      "BASS g MMT g\n",
+      "One of m_ap_bass_g and m_ap_mmt_g is not present in the catalogue.\n",
+      "One of m_bass_g and m_mmt_g is not present in the catalogue.\n",
+      "Megacam r SUPRIME r\n",
+      "SUPRIME r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 5\n",
+      "SUPRIME r (total) - Megacam r (total):\n",
+      "  Number of outliers: 4\n",
+      "Megacam r GPC1 r\n",
+      "GPC1 r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - Megacam r (total):\n",
+      "  Number of outliers: 4\n",
+      "Megacam r BASS r\n",
+      "One of m_ap_megacam_r and m_ap_bass_r is not present in the catalogue.\n",
+      "One of m_megacam_r and m_bass_r is not present in the catalogue.\n",
+      "SUPRIME r GPC1 r\n",
+      "GPC1 r (aperture) - SUPRIME r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - SUPRIME r (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r BASS r\n",
+      "One of m_ap_suprime_r and m_ap_bass_r is not present in the catalogue.\n",
+      "One of m_suprime_r and m_bass_r is not present in the catalogue.\n",
+      "GPC1 r BASS r\n",
+      "One of m_ap_gpc1_r and m_ap_bass_r is not present in the catalogue.\n",
+      "One of m_gpc1_r and m_bass_r is not present in the catalogue.\n",
+      "Megacam i SUPRIME i\n",
+      "SUPRIME i (aperture) - Megacam i (aperture):\n",
+      "  Number of outliers: 28\n",
+      "SUPRIME i (total) - Megacam i (total):\n",
+      "  Number of outliers: 5\n",
+      "Megacam i GPC1 i\n",
+      "GPC1 i (aperture) - Megacam i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - Megacam i (total):\n",
+      "  Number of outliers: 4\n",
+      "Megacam i MMT i\n",
+      "No sources have both Megacam i (aperture) and MMT i (aperture) values.\n",
+      "\n",
+      "MMT i (total) - Megacam i (total):\n",
+      "  Number of outliers: 20\n",
+      "SUPRIME i GPC1 i\n",
+      "GPC1 i (aperture) - SUPRIME i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - SUPRIME i (total):\n",
+      "  Number of outliers: 10\n",
+      "SUPRIME i MMT i\n",
+      "No sources have both SUPRIME i (aperture) and MMT i (aperture) values.\n",
+      "\n",
+      "MMT i (total) - SUPRIME i (total):\n",
+      "  Number of outliers: 2\n",
+      "GPC1 i MMT i\n",
+      "No sources have both GPC1 i (aperture) and MMT i (aperture) values.\n",
+      "\n",
+      "MMT i (total) - GPC1 i (total):\n",
+      "  Number of outliers: 2\n",
+      "Megacam z SUPRIME z\n",
+      "SUPRIME z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 3\n",
+      "SUPRIME z (total) - Megacam z (total):\n",
+      "  Number of outliers: 5\n",
+      "Megacam z GPC1 z\n",
+      "GPC1 z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
+    "        #print(band1, band2)\n",
     "\n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
@@ -196,24 +360,39 @@
     "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
     "        flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
     "        \n",
-    "        \n",
-    "        master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
+    "        try:\n",
+    "            master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
     "                      ecol1, ecol2,\n",
     "                      flagcol1, flagcol2,\n",
     "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
-    "                      \n",
+    "        except KeyError:\n",
+    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
     "                      \n",
     "        \n",
     "        # Tot mag\n",
     "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
     "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
     "        flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
-    "                      \n",
-    "        master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
+    "              \n",
+    "        try:\n",
+    "            master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
     "                      ecol1, ecol2,\n",
     "                      flagcol1, flagcol2,\n",
-    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))            \n",
+    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))   \n",
+    "        except KeyError:\n",
+    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
     "                      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.colnames"
    ]
   },
   {
