--- a/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
+++ b/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
@@ -45,11 +45,11 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [\"Megacam u\",                                  \"MMT u\"]\n",
-    "g_bands = [\"Megacam g\", \"SUPRIME g\", \"GPC1 g\", \"BASS g\", \"MMT g\"] \n",
-    "r_bands = [\"Megacam r\", \"SUPRIME r\", \"GPC1 r\", \"BASS r\"]\n",
-    "i_bands = [\"Megacam i\", \"SUPRIME i\", \"GPC1 i\",           \"MMT i\"]\n",
-    "z_bands = [\"Megacam z\", \"SUPRIME z\", \"GPC1 z\", \"BASS z\", \"MMT z\"]\n",
+    "u_bands = [\"Megacam u\",                                     \"MMT u\"]\n",
+    "g_bands = [\"Megacam g\", \"SUPRIME g\", \"GPC1 g\", \"90Prime g\", \"MMT g\"] \n",
+    "r_bands = [\"Megacam r\", \"SUPRIME r\", \"GPC1 r\", \"90Prime r\"]\n",
+    "i_bands = [\"Megacam i\", \"SUPRIME i\", \"GPC1 i\",              \"MMT i\"]\n",
+    "z_bands = [\"Megacam z\", \"SUPRIME z\", \"GPC1 z\", \"Mosaic z\",  \"MMT z\"]\n",
     "y_bands = [             \"SUPRIME y\", \"GPC1 y\"]\n",
     "\n",
     "J_bands = [\"WIRCAM J\",  \"WIRCS J\",              \"UKIDSS J\", \"OMEGA2000 J\"]\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,6 +344,105 @@
       "  Number of outliers: 5\n",
       "Megacam z GPC1 z\n",
       "GPC1 z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - Megacam z (total):\n",
+      "  Number of outliers: 4\n",
+      "Megacam z BASS z\n",
+      "One of m_ap_megacam_z and m_ap_bass_z is not present in the catalogue.\n",
+      "One of m_megacam_z and m_bass_z is not present in the catalogue.\n",
+      "Megacam z MMT z\n",
+      "No sources have both Megacam z (aperture) and MMT z (aperture) values.\n",
+      "\n",
+      "MMT z (total) - Megacam z (total):\n",
+      "  Number of outliers: 26\n",
+      "SUPRIME z GPC1 z\n",
+      "GPC1 z (aperture) - SUPRIME z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 1\n",
+      "SUPRIME z BASS z\n",
+      "One of m_ap_suprime_z and m_ap_bass_z is not present in the catalogue.\n",
+      "One of m_suprime_z and m_bass_z is not present in the catalogue.\n",
+      "SUPRIME z MMT z\n",
+      "No sources have both SUPRIME z (aperture) and MMT z (aperture) values.\n",
+      "\n",
+      "MMT z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z BASS z\n",
+      "One of m_ap_gpc1_z and m_ap_bass_z is not present in the catalogue.\n",
+      "One of m_gpc1_z and m_bass_z is not present in the catalogue.\n",
+      "GPC1 z MMT z\n",
+      "No sources have both GPC1 z (aperture) and MMT z (aperture) values.\n",
+      "\n",
+      "MMT z (total) - GPC1 z (total):\n",
+      "  Number of outliers: 2\n",
+      "BASS z MMT z\n",
+      "One of m_ap_bass_z and m_ap_mmt_z is not present in the catalogue.\n",
+      "One of m_bass_z and m_mmt_z is not present in the catalogue.\n",
+      "SUPRIME y GPC1 y\n",
+      "GPC1 y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 0\n",
+      "WIRCAM J WIRCS J\n",
+      "No sources have both WIRCAM J (aperture) and WIRCS J (aperture) values.\n",
+      "\n",
+      "WIRCS J (total) - WIRCAM J (total):\n",
+      "  Number of outliers: 2\n",
+      "WIRCAM J UKIDSS J\n",
+      "UKIDSS J (aperture) - WIRCAM J (aperture):\n",
+      "  Number of outliers: 13\n",
+      "UKIDSS J (total) - WIRCAM J (total):\n",
+      "  Number of outliers: 71\n",
+      "WIRCAM J OMEGA2000 J\n",
+      "No sources have both WIRCAM J (aperture) and OMEGA2000 J (aperture) values.\n",
+      "\n",
+      "OMEGA2000 J (total) - WIRCAM J (total):\n",
+      "  Number of outliers: 1\n",
+      "WIRCS J UKIDSS J\n",
+      "No sources have both WIRCS J (aperture) and UKIDSS J (aperture) values.\n",
+      "\n",
+      "UKIDSS J (total) - WIRCS J (total):\n",
+      "  Number of outliers: 1\n",
+      "WIRCS J OMEGA2000 J\n",
+      "No sources have both WIRCS J (aperture) and OMEGA2000 J (aperture) values.\n",
+      "\n",
+      "OMEGA2000 J (total) - WIRCS J (total):\n",
+      "  Number of outliers: 0\n",
+      "UKIDSS J OMEGA2000 J\n",
+      "No sources have both UKIDSS J (aperture) and OMEGA2000 J (aperture) values.\n",
+      "\n",
+      "OMEGA2000 J (total) - UKIDSS J (total):\n",
+      "  Number of outliers: 2\n",
+      "WIRCAM Ks WIRCS K\n",
+      "WIRCS K (aperture) - WIRCAM Ks (aperture):\n",
+      "  Number of outliers: 21\n",
+      "WIRCS K (total) - WIRCAM Ks (total):\n",
+      "  Number of outliers: 7\n",
+      "WIRCAM Ks NEWFIRM K\n",
+      "No sources have both WIRCAM Ks (aperture) and NEWFIRM K (aperture) values.\n",
+      "\n",
+      "NEWFIRM K (total) - WIRCAM Ks (total):\n",
+      "  Number of outliers: 0\n",
+      "WIRCAM Ks OMEGA2000 Ks\n",
+      "No sources have both WIRCAM Ks (aperture) and OMEGA2000 Ks (aperture) values.\n",
+      "\n",
+      "OMEGA2000 Ks (total) - WIRCAM Ks (total):\n",
+      "  Number of outliers: 0\n",
+      "WIRCS K NEWFIRM K\n",
+      "No sources have both WIRCS K (aperture) and NEWFIRM K (aperture) values.\n",
+      "\n",
+      "NEWFIRM K (total) - WIRCS K (total):\n",
+      "  Number of outliers: 0\n",
+      "WIRCS K OMEGA2000 Ks\n",
+      "No sources have both WIRCS K (aperture) and OMEGA2000 Ks (aperture) values.\n",
+      "\n",
+      "OMEGA2000 Ks (total) - WIRCS K (total):\n",
+      "  Number of outliers: 0\n",
+      "NEWFIRM K OMEGA2000 Ks\n",
+      "No sources have both NEWFIRM K (aperture) and OMEGA2000 Ks (aperture) values.\n",
+      "\n",
+      "OMEGA2000 Ks (total) - NEWFIRM K (total):\n",
       "  Number of outliers: 0\n"
      ]
     }
@@ -382,17 +481,6 @@
     "        except KeyError:\n",
     "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
     "                      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "master_catalogue.colnames"
    ]
   },
   {
