--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -44,6 +44,8 @@
     "\n",
     "from astropy.table import Table\n",
     "\n",
+    "from herschelhelp_internal.utils import gen_help_id\n",
+    "\n",
     "from herschelhelp.filters import correct_galactic_extinction\n",
     "from herschelhelp.external import convert_table_for_cigale"
    ]
@@ -57,7 +59,33 @@
    "outputs": [],
    "source": [
     "SUFFIX=\"20180313\"\n",
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_COSMOS/data/COSMOS_{}_cigale.fits\".format(SUFFIX))"
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_COSMOS/data/COSMOS_{}_cigale.fits\".format(SUFFIX))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## id renaming\n",
+    "\n",
+    "Cigale requires the ids to be in the current format unlike the old ids used because COSMOS was processed first so we add new ones and create a cross ident for the final join to return them to the orginal values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.rename_column('help_id', 'main_help_id')\n",
+    "master_catalogue.add_column(Column(gen_help_id(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "                                   name=\"help_id\"))\n",
+    "merged_catalogue['help_id', 'main_help_id'].write(\n",
+    "    \"./data/master_list_help_cigale_cross_ident_cosmos{}.fits\".format(SUFFIX), overwrite=True)\n",
+    "\n",
+    "merged_catalogue.remove_columns('main_help_id')"
    ]
   },
   {
