more work on flagging

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -42,7 +42,7 @@
     "import os\n",
     "os.environ['LOG_LEVEL'] = 'INFO'\n",
     "\n",
-    "from astropy.table import Table\n",
+    "from astropy.table import Table, Column\n",
     "\n",
     "from herschelhelp_internal.utils import gen_help_id\n",
     "\n",
