--- a/dmu4/dmu4_sm_SGP/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_SGP/generate_holes.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -114,6 +116,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -134,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ORDER=16\n",
@@ -165,12 +170,11 @@
     "# Run with parameters from IDL code. The IDL output files are in ./data/\n",
     "\n",
     "per_catalogue_params = [\n",
-    "#     Field       Band        A         B            magnitude limit\n",
-    "    [field, 'megacam_r',      2.30374,  -0.0962746,  18], # Using 18 as faint limit.\n",
-    "    [field, 'gpc1_r',         2.46029,  -0.111433,   18], # Using 18 as faint limit. \n",
-    "    [field, 'irac1',          2.56501,  -0.100879,   18], # Using 18 as faint limit.\n",
-    "    [field, 'ukidss_k',       3.67944,  -0.173850,   18], # Using 18 as faint limit.\n",
-    "    [field, 'wfc_r',          3.43951,  -0.173789,   18]  # Using 18 as faint limit.\n",
+    "#     Field       Band        A           B            magnitude limit\n",
+    "\n",
+    "    [field, 'gpc1_g',         2.56352,    -0.119024,   16], # Using 18 as faint limit. \n",
+    "    [field, 'vista_ks',       3.44489,    -0.161751,   16], # Using 18 as faint limit.\n",
+    "\n",
     "]   \n",
     "\n",
     "#We previously took a moc of the survey to only make holes on that area, which \n",
@@ -180,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for pristine_cat in per_catalogue_params:\n",
@@ -201,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ORDER=16\n",
@@ -231,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
