fix to Bootes Brown

--- a/dmu1/dmu1_ml_Bootes/2.0_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.0_Brown_Reformatting.ipynb
@@ -1413,23 +1413,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-7cab287c58a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerged_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'brown_i_id'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mmerged_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'brown_irac_id'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmerged_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'help_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mwithout_ndwfs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmerged_catalogue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m merged_catalogue[id_names].write(\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There were a total of 3481661 objects before and 1657470 after removing those that are not in the Brown catalogue\n"
      ]
     }
    ],
    "source": [
-    "mask = merged_catalogue['brown_i_id'] == -1 & merged_catalogue['brown_irac_id'] == -1\n",
+    "mask = np.bitwise_and(merged_catalogue['brown_i_id'] == -1 , merged_catalogue['brown_irac_id'] == -1)\n",
     "merged_catalogue['help_id'][mask] = -1\n",
     "without_ndwfs = len(merged_catalogue)\n",
     "\n",
